force-app/main/default/objects/Marketing_Call_Tracking__c/Marketing_Call_Tracking__c.object-meta.xml
<CustomObject>
    <description>case # 22304998 - Used to store keywords from Marketing websites or inbound phone calls. Linked to Lead, Contact and opportunities, partner referrals.</description>
    <label>Marketing Call Tracking</label>
    <nameField>
        <displayFormat>Tracking-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Call Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>