force-app/main/default/objects/Marketing_Call_Tracking__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Marketing Call Tracking</relationshipLabel>
    <relationshipName>Marketing_Call_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>