force-app/main/default/objects/Marketing_Call_Tracking__c/fields/Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>Campaign_ID__c</fullName>
    <description>case #24569474 - additional fields coming in from website forms, used by Marketing</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Campaign ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>