force-app/main/default/objects/Marketing_Call_Tracking__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Marketing Call Tracking</relationshipLabel>
    <relationshipName>Marketing_Call_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>