force-app/main/default/objects/Marketing_Call_Tracking__c/fields/gl_Accounting_Professional__c.field-meta.xml
<CustomField>
    <fullName>gl_Accounting_Professional__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>gl Accounting Professional?</label>
    <length>3</length>
    <type>Text</type>
</CustomField>