force-app/main/default/objects/Marketing_Call_Tracking__c/fields/gl_CPA_Email__c.field-meta.xml
<CustomField>
    <fullName>gl_CPA_Email__c</fullName>
    <description>APR0122251 - SFDC updates for GL Integration inbound process</description>
    <encryptionScheme>None</encryptionScheme>
    <label>gl CPA Email</label>
    <type>Email</type>
</CustomField>