force-app/main/default/objects/Marketing_Call_Tracking__c/fields/gl_CPA_Processing_On_Your_Behalf__c.field-meta.xml
<CustomField>
    <fullName>gl_CPA_Processing_On_Your_Behalf__c</fullName>
    <description>APR0122251 - SFDC updates for GL Integration inbound process</description>
    <encryptionScheme>None</encryptionScheme>
    <label>gl CPA Processing On Your Behalf</label>
    <length>3</length>
    <type>Text</type>
</CustomField>