force-app/main/default/objects/Marketing_Call_Tracking__c/fields/gl_CPA_ZIP_Code__c.field-meta.xml
<CustomField>
    <fullName>gl_CPA_ZIP_Code__c</fullName>
    <description>APR0122251 - SFDC updates for GL Integration inbound process</description>
    <encryptionScheme>None</encryptionScheme>
    <label>gl CPA ZIP Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>