force-app/main/default/objects/Marketing_Call_Tracking__c/fields/gl_Current_Client__c.field-meta.xml
<CustomField>
    <fullName>gl_Current_Client__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>gl Current Client?</label>
    <length>3</length>
    <type>Text</type>
</CustomField>