force-app/main/default/objects/Marketing_Call_Tracking__c/fields/Invoca_Call_Log__c.field-meta.xml
<CustomField>
    <fullName>Invoca_Call_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoca Call Log</label>
    <referenceTo>INVOCA_FOR_SF__Invoca_Call_Log__c</referenceTo>
    <relationshipLabel>Marketing Call Tracking</relationshipLabel>
    <relationshipName>Marketing_Call_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>