force-app/main/default/objects/Marketing_Call_Tracking__c/fields/irPartnerName__c.field-meta.xml
<CustomField>
    <fullName>irPartnerName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>irPartnerName</label>
    <length>60</length>
    <type>Text</type>
</CustomField>