force-app/main/default/objects/Marketing_Call_Tracking__c/fields/Keywords__c.field-meta.xml
<CustomField>
    <fullName>Keywords__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Keywords</label>
    <type>TextArea</type>
</CustomField>