force-app/main/default/objects/Marketing_Call_Tracking__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Marketing Call Tracking</relationshipLabel>
    <relationshipName>Marketing_Call_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>