force-app/main/default/objects/Marketing_Call_Tracking__c/fields/MM_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>MM_Call_Date__c</fullName>
    <description>case #22294246 - fed in thru api by 3rd party Dialog Tech, used by Marketing
when the call was placed</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>when the call was placed</inlineHelpText>
    <label>MM_Call_Date</label>
    <type>DateTime</type>
</CustomField>