force-app/main/default/objects/Marketing_Call_Tracking__c/fields/MM_caller_number__c.field-meta.xml
<CustomField>
    <fullName>MM_caller_number__c</fullName>
    <description>case #22294246 - fed in thru api by 3rd party Dialog Tech, used by Marketing 
caller&apos;s caller ID</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>caller&apos;s caller ID</inlineHelpText>
    <label>MM_Caller_Phone</label>
    <length>15</length>
    <type>Text</type>
</CustomField>