force-app/main/default/objects/Marketing_Call_Tracking__c/fields/MM_Destination_Number__c.field-meta.xml
<CustomField>
    <fullName>MM_Destination_Number__c</fullName>
    <description>case #22294246 - fed in thru api by 3rd party Dialog Tech, used by Marketing
destination number the caller called</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>destination number the caller called</inlineHelpText>
    <label>MM_Call_Destination</label>
    <length>15</length>
    <type>Text</type>
</CustomField>