force-app/main/default/objects/Marketing_Call_Tracking__c/fields/MM_Internal_Call_ID__c.field-meta.xml
<CustomField>
    <fullName>MM_Internal_Call_ID__c</fullName>
    <description>case #22294246 - fed in thru api by 3rd party Dialog Tech, used by Marketing
Dialog Tech internal call ID</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Dialog Tech internal call ID</inlineHelpText>
    <label>MM_Call_Unique_ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>