force-app/main/default/objects/Marketing_Call_Tracking__c/fields/OasisEE_Email__c.field-meta.xml
<CustomField>
    <fullName>OasisEE_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OasisEE_Email</label>
    <type>Email</type>
</CustomField>