force-app/main/default/objects/Marketing_Call_Tracking__c/fields/OracleCommerceCloudId__c.field-meta.xml
<CustomField>
    <fullName>OracleCommerceCloudId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Unique in OCC, no other system and it no visible outside of OCC at this time</inlineHelpText>
    <label>Oracle Commerce Cloud Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>