force-app/main/default/objects/Marketing_Call_Tracking__c/fields/Partner_Referral__c.field-meta.xml
<CustomField>
    <fullName>Partner_Referral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Referral</label>
    <referenceTo>PartnerReferral__c</referenceTo>
    <relationshipLabel>Marketing Call Tracking</relationshipLabel>
    <relationshipName>Marketing_Call_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>