force-app/main/default/objects/Marketing_Call_Tracking__c/fields/PPCPN__c.field-meta.xml
<CustomField>
    <fullName>PPCPN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PPCPN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>