force-app/main/default/objects/Marketing_Call_Tracking__c/fields/ProdPEO__c.field-meta.xml
<CustomField>
    <fullName>ProdPEO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prod-PEO</label>
    <type>Checkbox</type>
</CustomField>