force-app/main/default/objects/Marketing_Call_Tracking__c/fields/Referring_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Referring_Company_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Referring_Company_Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>