force-app/main/default/objects/Marketing_Call_Tracking__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dialog Tech</fullName>
                <default>true</default>
                <label>Dialog Tech</label>
            </value>
            <value>
                <fullName>WEBLEAD</fullName>
            </value>
            <value>
                <fullName>Invoca</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>