force-app/main/default/objects/Marketing_Call_Tracking__c/fields/utm_content__c.field-meta.xml
<CustomField>
    <fullName>utm_content__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>utm_content</label>
    <length>100</length>
    <type>Text</type>
</CustomField>