force-app/main/default/objects/Marketing_Call_Tracking__c/fields/webform_device__c.field-meta.xml
<CustomField>
    <fullName>webform_device__c</fullName>
    <description>case #23623647 - additional fields coming in from website forms, used by Marketing</description>
    <encryptionScheme>None</encryptionScheme>
    <label>webform_device</label>
    <length>275</length>
    <type>LongTextArea</type>
</CustomField>