force-app/main/default/objects/Marketing_Call_Tracking__c/fields/webform_mm_campaign__c.field-meta.xml
<CustomField>
    <fullName>webform_mm_campaign__c</fullName>
    <description>case #23623647 - additional fields coming in from website forms, used by Marketing</description>
    <encryptionScheme>None</encryptionScheme>
    <label>webform_mm_campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>