force-app/main/default/objects/Marketing_Call_Tracking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Lead__c</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Keywords__c</columns>
    <columns>Source__c</columns>
    <columns>Status__c</columns>
    <columns>MM_Call_Date__c</columns>
    <columns>Partner_Referral__c</columns>
    <columns>Task_Call_Result__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>6/2/2017 12:00 AM</value>
    </filters>
    <filters>
        <field>Source__c</field>
        <operation>equals</operation>
        <value>Dialog Tech,Invoca</value>
    </filters>
    <label>All</label>
</ListView>