force-app/main/default/objects/Marketing_Call_Tracking__c/listViews/cmf_view.listView-meta.xml
<ListView>
    <fullName>cmf_view</fullName>
    <booleanFilter>1 AND (2 or 3)</booleanFilter>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Partner_Referral__c</columns>
    <columns>Inbound_Task_ID__c</columns>
    <columns>Lead__c</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Match_Attempts__c</columns>
    <columns>match_to_task__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>8/7/2019 12:00 AM</value>
    </filters>
    <filters>
        <field>Contact__c</field>
        <operation>equals</operation>
        <value>Linda Williams</value>
    </filters>
    <filters>
        <field>Lead__c</field>
        <operation>equals</operation>
        <value>Linda Williams</value>
    </filters>
    <label>cmf view</label>
</ListView>