force-app/main/default/objects/Marketing_Call_Tracking__c/listViews/Created_Today.listView-meta.xml
<ListView>
    <fullName>Created_Today</fullName>
    <columns>NAME</columns>
    <columns>Lead__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Keywords__c</columns>
    <columns>Partner_Referral__c</columns>
    <columns>MM_caller_number__c</columns>
    <columns>Source__c</columns>
    <columns>Status__c</columns>
    <columns>Client_ID__c</columns>
    <columns>gclid__c</columns>
    <columns>Inbound_Task_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Created Today</label>
</ListView>