force-app/main/default/objects/Marketing_Call_Tracking__c/listViews/Created_Today_Mongoose.listView-meta.xml
<ListView>
    <fullName>Created_Today_Mongoose</fullName>
    <columns>NAME</columns>
    <columns>Lead__c</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Partner_Referral__c</columns>
    <columns>MM_caller_number__c</columns>
    <columns>MM_Call_Date__c</columns>
    <columns>Source__c</columns>
    <columns>Status__c</columns>
    <columns>Inbound_Task_ID__c</columns>
    <columns>Task_Call_Result__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <filters>
        <field>Source__c</field>
        <operation>equals</operation>
        <value>Dialog Tech</value>
    </filters>
    <label>Created Today Mongoose</label>
</ListView>